--- a/studio-prepops/package.json
+++ b/studio-prepops/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^6.28.3",
     "@sanity/vision": "^3.69.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
